--- a/games/test_model_3d/rooms/sprite.yaml
+++ b/games/test_model_3d/rooms/sprite.yaml
@@ -11,6 +11,12 @@ cam:
 items:
   - entity:
       type: _entity
+      components:
+        - type: components.keyinput
+          callbacks:
+            - key: 81
+              action: 1
+              func: keys.pippo
       model:
         type: model.sprite
         sheet: gfx/smb1.png
@@ -19,5 +25,10 @@ items:
             loop: false
             frames:
               - quads: [0, 0, 16, 16, -8, 0, {'scale': 1.5}]
-
+          walk:
+            loop: true
+            frames:
+              - quads: [16, 0, 16, 16, -8, 0]
+              - quads: [32, 0, 16, 16, -8, 0]
+              - quads: [48, 0, 16, 16, -8, 0]
     pos: [160, 120, 0]
