improving controller 2d and moving platform! avoid double move

--- a/games/test_model_3d/rooms/sprite2.yaml
+++ b/games/test_model_3d/rooms/sprite2.yaml
@@ -46,26 +46,31 @@ items:
   - type: _line
     size: [2, 0]
     pass_thru: True
-    move:
-      path: [11, 10, 9, 10]
-      mode: 1
-      speed: 10
-  - type: _line
-    size: [2,0]
-    pass_thru: True
-    move:
-      path: [1, 0, 1, 10]
-      mode: 1
-      speed: 10
+    pos: [11,10,0]
+#  - type: _line
+#    size: [2, 0]
+#    pass_thru: True
+#    move:
+#      path: [11, 10, 9, 10]
+#      mode: 1
+#      speed: 10
+#  - type: _line
+#    size: [2,0]
+#    pass_thru: True
+#    move:
+#      path: [1, 0, 1, 10]
+#      mode: 1
+#      speed: 10
   - type: brick
     pos: [6,9,0,7,9,0]
-  - type: goomba
-    model: goomba
-    size: [16, 16]
-    max_speed: 20
-    time_acc: 0.1
-    flip_on_edge: true
-    pos: [12, 7, 0, 6.5, 10.1,0]
+#  - type: goomba
+#    model: goomba
+#    size: [16, 16]
+#    max_speed: 5
+#    time_acc: 0.1
+#    flip_on_edge: true
+#    #pos: [12, 7, 0, 6.5, 10.1,0]
+#    pos: [6.5, 10.1,0]
 
 
 
