--- a/games/smbn/rooms/world1_1.yaml
+++ b/games/smbn/rooms/world1_1.yaml
@@ -27,8 +27,20 @@ engines:
         tag2: $globals.CollisionTags.goomba
         on_enter: $scripts.mario.foe_hits_mario
       - tag1: $globals.CollisionTags.player
-        tag2: $globals.CollisionTags.brick_sensor
+        tag2: $globals.CollisionTags.mushroom
+        on_enter: $scripts.mario.player_gets_mushroom
+      - tag1: $globals.CollisionTags.player
+        tag2: $globals.CollisionTags.flower
+        on_enter: $scripts.mario.player_gets_flower
+      - tag1: $globals.CollisionTags.player
+        tag2: $globals.CollisionTags.bonus_brick_sensor
         on_enter: $scripts.mario.hit_brick_sensor
+      - tag1: $globals.CollisionTags.player
+        tag2: $globals.CollisionTags.basic_brick_sensor
+        on_enter: $scripts.mario.hit_basic_brick_sensor
+      - tag1: $globals.CollisionTags.player
+        tag2: $globals.CollisionTags.hidden_brick_sensor
+        on_enter: $scripts.mario.hit_hidden_brick_sensor
     size: [80, 80]
 items:
   - type: _fps_counter
@@ -37,12 +49,12 @@ items:
     parent: diag
     pos: [0, 15, 0]
   - type: mario
-    size: [1, 1]
+    #size: [1, 1]
     max_speed: 100
     time_acc: 0.1
     jump_height: $globals.jump_height
     time_to_jump_apex: $globals.time_to_jump_apex
-    model: '@0'
+    #model: '@0'
     pos: [2, 8, 0]
   - type: rect
     size: [69, 2]
@@ -96,3 +108,62 @@ items:
     size: [9, 1]
     img: gfx/block2.png
     pos: [181, 2, 0]
+  - type: brick
+    model: bonusbrick
+    item: scripts.factories.flying_coin
+    pos: [16, 5, 0, 23, 5, 0, 22, 9, 0]
+  - type: brick
+    model: brick
+    pos: [20, 5, 0, 22, 5, 0, 24, 5, 0]
+  - type: brick
+    model: bonusbrick
+    item: scripts.factories.mushroom
+    pos: [21,5,0]
+  - type: brick
+    model: hiddenbrick
+    hidden: true
+    item: scripts.factories.mushroom_1up
+    pos: [64, 6, 0]
+  - type: rect
+    model: pipe2_green
+    size: [2, 2]
+    pos: [28, 2, 0]
+  - type: rect
+    model: pipe3_green
+    size: [2, 3]
+    pos: [38, 2, 0]
+  - type: rect
+    model: pipe4_green
+    size: [2, 4]
+    pos: [46, 2, 0, 57, 2, 0]
+# ----------------------------------
+# background items
+# ----------------------------------
+  - type: bg
+    model: hill
+    pos: [0, 2, -1, 48, 2, -1, 96, 2, -1, 144, 2, -1, 192, 2, -1]
+  - type: bg
+    model: hill_small
+    pos: [16, 2, -1, 64, 2, -1, 112, 2, -1, 160, 2, -1, 208, 2, -1]
+  - type: bg
+    model: bush_3
+    pos: [11, 2, -1, 59, 2, -1, 107, 2, -1, 155, 2, -1, 203, 2, -1]
+  - type: bg
+    model: bush_2
+    pos: [41,2,-1, 89, 2, -1, 137, 2, -1, 185, 2, -1]
+  - type: bg
+    model: bush_1
+    pos: [23,2,-1,71,2,-1,119,2,-1,167,2,-1,215,2,-1]
+  - type: bg
+    model: cloud_1
+    pos: [8, 10, -1, 19, 11, -1, 56, 10, -1, 67, 11, -1, 104, 10, -1, 115, 11, -1, 152, 10, -1, 163, 11, -1, 200, 10, -1, 211, 11, -1]
+  - type: bg
+    model: castle
+    pos: [202, 2, -0.5]
+#  - type: goomba
+#    model: goomba
+#    size: [16, 16]
+#    max_speed: 5
+#    time_acc: 0.1
+#    flip_on_edge: true
+#    pos: [21, 6,0]
