adding some pipes

--- a/games/smbn/rooms/world1_1.yaml
+++ b/games/smbn/rooms/world1_1.yaml
@@ -127,7 +127,7 @@ items:
   - type: rect
     model: pipe2_green
     size: [2, 2]
-    pos: [28, 2, 0]
+    pos: [28, 2, 0, 163, 2, 0, 179, 2, 0]
   - type: rect
     model: pipe3_green
     size: [2, 3]
