--- a/games/smbn/assets/model.yaml
+++ b/games/smbn/assets/model.yaml
@@ -74,3 +74,9 @@ castle:
          14, 3, 15, 3, 15, 3, 15, 3, 14, 3,
          -1   , 12, 3, 15, 1, 13, 3,    -1,
          -1   , 14, 3, 14, 3, 14, 3,    -1]
+pipe_green_hor:
+  type: model.tiled
+  tex: gfx/smb1.png
+  img_tile_size: [16, 16]
+  size: [3, 2]
+  data: [2, 5, 3, 5, 4, 5, 2, 4, 3, 4, 4, 4]
