--- a/games/smbn/rooms/world1_1.yaml
+++ b/games/smbn/rooms/world1_1.yaml
@@ -1,5 +1,11 @@
 type: _basic
 id: world1_1
+time: 300
+display_name: '1_1'
+start_positions:
+  - pos: [52, 8]
+  - pos: [164, 0]
+    script: $scripts.mario.rise
 vars:
   0: mario
 cam:
@@ -7,55 +13,29 @@ cam:
     id: main
     world_size: [3584, 240]
     cam_size: [256, 240]
-    bounds:
-      x: [0, 3584]
-      y: [0, 240]
-      z: [0, 100]
   - type: ortho
     id: diag
     world_size: [256, 240]
     cam_size: [256, 240]
-    bounds:
-      x: [0, 256]
-      y: [0, 240]
-      z: [0, 100]
+on_preload:
+  $tils.init
+on_load:
+  func: $tils.setup
 engines:
   - type: runner.scheduler
-  - type: runner.collisionengine
-    response:
-      - tag1: $globals.CollisionTags.player
-        tag2: $globals.CollisionTags.goomba
-        on_enter: $scripts.mario.foe_hits_mario
-      - tag1: $globals.CollisionTags.player
-        tag2: $globals.CollisionTags.mushroom
-        on_enter: $scripts.mario.player_gets_mushroom
-      - tag1: $globals.CollisionTags.player
-        tag2: $globals.CollisionTags.flower
-        on_enter: $scripts.mario.player_gets_flower
-      - tag1: $globals.CollisionTags.player
-        tag2: $globals.CollisionTags.bonus_brick_sensor
-        on_enter: $scripts.mario.hit_brick_sensor
-      - tag1: $globals.CollisionTags.player
-        tag2: $globals.CollisionTags.basic_brick_sensor
-        on_enter: $scripts.mario.hit_basic_brick_sensor
-      - tag1: $globals.CollisionTags.player
-        tag2: $globals.CollisionTags.hidden_brick_sensor
-        on_enter: $scripts.mario.hit_hidden_brick_sensor
-    size: [80, 80]
+  - $globals.collision_engine
 items:
-  - type: _fps_counter
-    font: mario_font
-    size: 8
+  - ref: scoreboard
     parent: diag
-    pos: [0, 15, 0]
+  - type: _entity
+    parent: diag
+    model:
+      type: model.rect
+      size: [256, 240]
+      color: $globals.colors.sky
+    pos: [0,0,-5]
+
   - type: mario
-    #size: [1, 1]
-    max_speed: 100
-    time_acc: 0.1
-    jump_height: $globals.jump_height
-    time_to_jump_apex: $globals.time_to_jump_apex
-    #model: '@0'
-    pos: [2, 8, 0]
   - type: rect
     size: [69, 2]
     img: gfx/block1.png
@@ -71,7 +51,7 @@ items:
   - type: rect
     size: [69, 2]
     img: gfx/block1.png
-    pos: [155, 0, 0]
+    pos: [155, 0, 1]
   - type: rect
     size: [5, 1]
     img: gfx/block2.png
@@ -111,14 +91,16 @@ items:
   - type: brick
     model: bonusbrick
     item: scripts.factories.flying_coin
-    pos: [16, 5, 0, 23, 5, 0, 22, 9, 0]
+    pos: [16, 5, 0, 23, 5, 0, 22, 9, 0, 94, 9, 0, 106, 5, 0, 109, 5, 0, 112, 5, 0, 129, 9, 0, 130, 9, 0, 170, 5, 0]
   - type: brick
     model: brick
-    pos: [20, 5, 0, 22, 5, 0, 24, 5, 0]
+    pos: [20, 5, 0, 22, 5, 0, 24, 5, 0, 77, 5, 0, 79, 5, 0, 80, 9, 0, 81, 9, 0, 82, 9, 0, 83, 9, 0, 84, 9, 0, 85, 9, 0,
+    86, 9, 0, 87, 9, 0, 91, 9, 0, 92, 9, 0, 93, 9, 0, 100, 5, 0, 118, 5, 0, 121, 9, 0, 122, 9, 0, 123, 9, 0, 128, 9, 0,
+    129, 5, 0, 130, 5, 0, 131, 9, 0, 168, 5, 0, 169, 5, 0, 171, 5, 0]
   - type: brick
     model: bonusbrick
     item: scripts.factories.mushroom
-    pos: [21,5,0]
+    pos: [21, 5, 0, 78, 5, 0, 109, 9, 0]
   - type: brick
     model: hiddenbrick
     hidden: true
@@ -127,7 +109,7 @@ items:
   - type: rect
     model: pipe2_green
     size: [2, 2]
-    pos: [28, 2, 0, 163, 2, 0, 179, 2, 0]
+    pos: [28, 2, 0, 163, 2, 1, 179, 2, 0]
   - type: rect
     model: pipe3_green
     size: [2, 3]
@@ -135,7 +117,27 @@ items:
   - type: rect
     model: pipe4_green
     size: [2, 4]
-    pos: [46, 2, 0, 57, 2, 0]
+    pos: [46, 2, 0, 57, 2, 1]
+  - ref: warp_down
+    args:
+      - world1_1b
+    pos: [58, 6, 0]
+#  - type: _entity
+#    components:
+#      - type: components.collider
+#        shape:
+#          type: shape3d.aabb
+#          size: [16, 1, 0]
+#          offset: [-8, 0, 0]
+#        flag: $globals.CollisionFlags.foe
+#        mask: $globals.CollisionFlags.player
+#        tag: $globals.CollisionTags.warp
+#        debug: True
+#      - type: components.info
+#        stuff:
+#          warp_to: world1_1b
+#    pos: [58, 6, 0]
+
 # ----------------------------------
 # background items
 # ----------------------------------
@@ -157,6 +159,13 @@ items:
   - type: bg
     model: cloud_1
     pos: [8, 10, -1, 19, 11, -1, 56, 10, -1, 67, 11, -1, 104, 10, -1, 115, 11, -1, 152, 10, -1, 163, 11, -1, 200, 10, -1, 211, 11, -1]
+  - type: bg
+    model: cloud_2
+    pos: [36,11,0,84,11,0,132,11,0,180,11,0]
+  - type: bg
+    model: cloud_3
+    pos: [27,10,0,75,10,0,123,10,0,171,10,0,219,10,0]
+
   - type: bg
     model: castle
     pos: [202, 2, -0.5]
