--- a/games/test_model_3d/assets/001.yaml
+++ b/games/test_model_3d/assets/001.yaml
@@ -85,7 +85,8 @@ skeleton_example:
       mesh: mesh.example1.legl
       parent: legu
       key_point: legl
-
+  animations:
+    walk: anim.walk
 
 mario:
   type: model.boxed
