--- a/games/test_model_3d/rooms/skeletal.yaml
+++ b/games/test_model_3d/rooms/skeletal.yaml
@@ -11,6 +11,9 @@ cam:
       x: [0, 100]
       y: [0, 100]
       z: [0, 100]
+on_load:
+  func: $scripts.keys.init
+  args: '@0'
 items:
   - type: _entity
     tag: sprite
@@ -22,4 +25,4 @@ items:
             action: 1
             func: $scripts.keys.on_key
     model: '@0'
-    pos: [10, 8, 0]
+    pos: [10, 1, 0]
