--- a/games/test_model_3d/main.yaml
+++ b/games/test_model_3d/main.yaml
@@ -3,9 +3,10 @@
   lang: eng
   device_size: [320, 240]
   window_size: [640, 480]
-  start_room: skeletal
+  start_room: walk3d
   shaders:
     - color
     - unlit_textured
     - text
     - skeletal
+    - light
