--- a/games/test_model_3d/rooms/walk3d.yaml
+++ b/games/test_model_3d/rooms/walk3d.yaml
@@ -8,20 +8,25 @@ cam:
     world_size: [ 640, 240 ]
 engines:
   - type: runner.scheduler
-  - type: runner.collisionengine
-    size: [80, 80]
+  - type: runner.collisionengine3d
+    size: [80, 80, 80]
 items:
   - type: _directional_light
     ambient: [0.2, 0.2, 0.2, 1.0]
     diffuse: [1.0, 1.0, 1.0, 1.0]
     direction: [0, -1, -1]
   - type: _prism_3d
-    poly: [0, 0, 100, 0, 100, 50, 0,50]
+    poly: [0, 0, 16, 0, 16, 20, 0,20]
     top: gfx/asphalt0.jpg
     side: gfx/curb.jpg
     repeat: [20, 1, 20]
+    pos: [0,0,0,1,0.02,0]
   - type: _player3D
     model: skeleton_example
     scale: 0.01
     size: [100, 800, 50]
-    pos: [0.5, 0, -2]
+    jump_height: 10
+    time_to_jump_apex: 0.5
+    max_speed: 10
+    time_acc: 0.5
+    pos: [0.5, 0.1, -2]
