--- a/games/test_model_3d/rooms/walk3d.yaml
+++ b/games/test_model_3d/rooms/walk3d.yaml
@@ -8,6 +8,10 @@ cam:
     world_size: [ 640, 240 ]
 engines:
   - type: runner.scheduler
+  - type: runner.keylistener
+    keys:
+      - key: 299
+        func: $scripts.keys.restart
   - type: runner.collisionengine3d
     size: [80, 80, 80]
 items:
@@ -22,7 +26,7 @@ items:
     repeat: [20, 1, 20]
     pos: [0,0,0,1,0.02,0]
   - type: _player3D
-    model: skeleton_example
+    model: skeleton_example_2
     scale: 0.01
     size: [100, 800, 50]
     jump_height: 10
