--- a/games/monkeyn/assets/01.yaml
+++ b/games/monkeyn/assets/01.yaml
@@ -141,11 +141,11 @@ guybrush:
         - quads: [[164,12,22,36,12,0], [205,143,11,13,6,-34]]
     talk_n:
       frames:
-        - quads: [[189,12,20,36,12,0], [220,101,11,12,7,-35]]
-        - quads: [[189,12,20,36,12,0], [233,101,11,12,7,-35]]
-        - quads: [[189,12,20,36,12,0], [220,101,11,12,7,-35]]
-        - quads: [[189,12,20,36,12,0], [233,101,11,12,7,-35]]
-        - quads: [[189,12,20,36,12,0], [220,115,11,12,7,-35]]
+        - quads: [[189,12,20,36,-12,0], [220,101,11,12,-7,35]]
+        - quads: [[189,12,20,36,-12,0], [233,101,11,12,-7,35]]
+        - quads: [[189,12,20,36,-12,0], [220,101,11,12,-7,35]]
+        - quads: [[189,12,20,36,-12,0], [233,101,11,12,-7,35]]
+        - quads: [[189,12,20,36,-12,0], [220,115,11,12,-7,35]]
     operate_e:
       elements:
         - quads: [[2,150,28,45,10,0]]
