--- a/games/monkeyn/rooms/lookout.yaml
+++ b/games/monkeyn/rooms/lookout.yaml
@@ -20,3 +20,6 @@
     - type: scumm.walkarea
       id: 0
       poly: [203, 51, 152, 51, 152, 33, 221, 26, 234, 10, 234, 0, 234, -20, 260, -20, 260, 0, 260, 10, 293, 40, 315, 40, 315, 62]
+      depth:
+        type: func.liny
+        values: [0, 1, 144, 0]
